Implemented logic for the games
